--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <!-- Leaf Morphology Section -->
         <section id="morphology" class="mt-12 bg-white p-6 rounded-2xl shadow-lg">
-            <h2 class="text-2xl font-bold text-green-800 mb-4 text-center">ข้อมูลลักษณะทางสัณฐานวิทยาของใบพืช</h2>
+            <h2 class="text-2xl font-bold text-green-800 mb-4 text-center">ข้อมูลลักษณะทางสัณฐานวิทยาของพืช</h2>
             <p class="text-center text-gray-600 mb-6">ใช้รูปภาพนี้เพื่อช่วยในการตัดสินใจเลือกคำตอบ</p>
             <div class="flex justify-center">
                 <img src="https://lh3.googleusercontent.com/d/1311TdIBBg7ktzeHaAcvz0MDN0CIviqQb" alt="ข้อมูลพรรณไม้" class="rounded-lg shadow-md max-w-full h-auto">
